# fun_with_compilers

./: README.md  lexproj.cabal  test.isil  test.js  test.json  test.yml  test2.isil  testsjson
src/: Entrypoint.hs  Main.hs  Sets.hs  Tokens.hs
src/Calculator/Infix/: CalculatorInfixTokens.hs  LexicalAnalyser.hs  MainCalculatorInfix.hs  SemanticAnalyser.hs  SintaticAnalyser.hs
src/Compiler/: CodeGenerationKlang.hs  LexicalAnalyser.hs  ParseTree.hs  RunProject.hs  SemanticAnalyser.hs  SintaticAnalyser.hs  SymbolTableKlang.hs  test.klang
src/HaskellHelpers/: MonadsExample.hs
src/Json/: JsonCodeGenJs.hs  JsonCodeGenYml.hs  JsonIR.hs  JsonLexAnalyser.hs  JsonSemanticAnalyser.hs  JsonSintaticAnalyser.hs  MainJson.hs  TokensJson.hs
src/Klang/: CodeGenerationKlang.hs  IRBuilder.hs  IRBuilderKlang.hs  KlangSets.hs  LexicalAnalyserKlang.hs  RunProject.hs  SemanticAnalyserKlang.hs  SintaticAnalyserKlang.hs  TokensKlang.hs  klang_parsed.js  program.klang  test.klang
src/Variables/: LexicalAnalyser.hs
