name:                lexproj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lexproj#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
  hs-source-dirs:
    src
  other-modules:
    Paths_lexproj,
    JsonLexAnalyser
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl

executable lexproj
  hs-source-dirs:      src, src/Json
  main-is:             Main.hs
  other-modules:
      Paths_lexproj,
      JsonLexAnalyser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl